-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.314 2008-06-12 22:06:19 guru Exp $
-----------------------------------------------------------------------------------------
2005-06-12	pwessel
	* examples:		Added ex27 for plotting img files and ex28 for plotting UTM

2005-06-11	pwessel
	* mgd77/mgd77sniffer.c:	Bitwise assignment error was deactivating other fields when
				depth field was missing from a cruise.  Another bitwise error
				was overwriting E77 nav flags when navigation was found on land
				Updated sample grid function to handle longitudes for img files
	* mgd77/mgd77.c:	Index array error resulting in wrong IGRF start and stop
				years was fixed.
2005-06-09	pwessel
	* xyz2grd.c:		For -E under Windows we used fscanf with a pointer from GMT DLL
				which would fail for mysterious reasons

2005-06-05	pwessel
	grdfilter.c:		Complained if -R was used and xmin was < h.xmin for full
				360-range grid.
				
2005-06-03	pwessel
	* gmt_init.[ch]:	gmtdefs.encoding.name could be freed even if never allocated.
	* examples/ex27:	New example showing how to plot Mercator *.img grids.

2005-06-02	pwessel
	* pslib.c:		ps_polygon can only split line when rgb[0] == -1 not < 0
				since -3 now means to use a fill pattern.
	* pstext.c:		Enhanced -Z+ option expects z-level values in 3rd column
	
2005-06-01	pwessel
	* Win installer:	Now installs the GMT include files so users can build their own
				programs that use the GMT libs

2005-05-29	pwessel
	* grdreformat.c:	There is no longer a share/conf/gmt_formats.conf so the
				grdreformat usage message crashes. Introduced new file
				grdreformat.h created by GNUmakefile to include this info.
				
2005-05-27	pwessel
	* grdfilter.c:		The -D5 did not initialize xscale so filter search box was
				set to region width which typically is much larger.  The bug
				did not affect the results but unnecessarily increased runtime.
2005-05-27	remko