@@ -1,5 +1,5 @@
 %------------------------------------------
-%	$Id: GMT_Chapter_7.tex,v 1.52 2008-06-12 22:06:19 guru Exp $
+%	$Id: GMT_Chapter_7.tex,v 1.53 2008-06-13 00:31:34 guru Exp $
 %
 %	The GMT Documentation Project
 %	Copyright 2000-2008.
@@ -928,13 +928,14 @@ We hope to refine this further and extend the availability of the full projectio
 
 Next, we show how to plot a data grid that is distributed in projected form.  The gravity and
 predicted bathymetry grids produced by David Sandwell and Walter H. F. Smith are not geographical
-grids but instead tied to a spherical Mercator grid.  The \GMT\ supplement imgsrc has tools to
+grids but instead given on a spherical Mercator grid.  The \GMT\ supplement imgsrc has tools to
 extract subsets of these large grids.  If you need to make a non-Mercator map then you must extract
 a geographic grid using \GMTprog{img2grd} and then plot it using your desired map projection.
 However, if you want to make a Mercator map then you can save time and preserve data quality by
-avoiding to re-project the data twice since it is already in a Mercator projection.  This example
-shows how this is accomplished.  We use the \Opt{M} option in \GMTprog{img2grd} to pull out the
-grid in Mercator units (i.e., do \emph{not} invert the Mercator grid) and then simply plot the
+avoiding to re-project the data set twice since it is already in a Mercator projection.  This example
+shows how this is accomplished.  We use the \Opt{M} option in \GMTprog{img2grd}\footnote{You could
+also use \GMTprog{img2mercgrd} directly -- your only option under DOS} to pull out the
+grid in Mercator units (i.e., do \emph{not} invert the Mercator projection) and then simply plot the
 grid using a linear projection with a suitable scale (here 0.25 inches per degrees of longitude).
 To overlay basemaps and features that has geographic longitude/latitude coordinates we must remember
 two key issues:
@@ -957,20 +958,20 @@ was then added to complete the illustration.
 \section{Mixing UTM and geographic data sets}
 \index{Example!Mixing UTM and geographic data|(}
 
-Finally, we present a case where we wish to plot a data set given in UTM coordinates and make sure
-it is properly registered with overlying geographic data such as coastlines or data points.  The
-number one rookie error most \GMT\ users commit is to specify the UTM projection with their UTM
-data.  However, that data have already been projected and is now in linear meters.  The only way
-sensible to plot such data is with a linear projection, yielding a UTM map.  In this step one can
+Finally, we present a similar case: We wish to plot a data set given in UTM coordinates and want it
+to be properly registered with overlying geographic data, such as coastlines or data points.  The
+mistake many \GMT\ rookies make is to specify the UTM projection with their UTM
+data.  However, that data have already been projected and is now in linear meters.  The only
+sensible way to plot such data is with a linear projection, yielding a UTM map.  In this step one can
 choose to annotate or tick the map in UTM meters as well.  To plot geographic (lon/lat) data on
-the same map there are a few things you must remember:
+the same map there are a few things you must consider:
 \begin{enumerate}
 	\item You need to know the lower left and upper right UTM coordinates of your map. Given
 	the UTM zone you can use \GMTprog{mapproject} to recover the lon/lat of those two points.
 	Conversely, if you instead know the lon/lat corners then you need to convert those
-	to UTM coordinates.  You now have the ability to specify two domains with the \Opt(R) setting:
+	to UTM coordinates.  You now have the ability to specify two domains with the \Opt{R} setting:
 	The linear UTM meter domain when plotting UTM data and the geographic domain (remember to use the
-	rectangular variant of \Opt(R) that ends with the modifier {\bf r}) when plotting lon/lat data.
+	rectangular variant of \Opt{R} that ends with the modifier {\bf r}) when plotting lon/lat data.
 	\item Make sure you use the same scale (and not width) with both the linear and UTM projection.
 \end{enumerate}
 
