@@ -1,8 +1,16 @@
 <HTML>
-<!--  $Id: gmt_arrrghh.html,v 1.19 2008-05-07 00:13:41 guru Exp $  -->
+<!--  $Id: gmt_arrrghh.html,v 1.20 2008-06-13 00:31:35 guru Exp $  -->
 <TITLE>GMT Incompatibilities Notes</title>
 <BODY bgcolor="#ffffff">
 <CENTER><H2>GMT Incompatibilities Notes</CENTER></H2><P>
+<HR>
+<H3><CENTER>15-OCT-2008: GMT Version 4.3.2 Released</H3></CENTER>
+4.3.2 scripts are for the most part fully backward compatible with 4.3.1.  One
+exception is the map scale option <B>-L</B> in psbasemap and pscoast which
+had difficulties parsing ddd:mm:ss coordinates in the presence of the optional
+:label: modifier.  For a list of all the new
+capabilities and enhancements, see the <A HREF="gmt_releases.html">RELEASES</A>
+page.
 <HR>
 <H3><CENTER>15-MAY-2008: GMT Version 4.3.1 Released</H3></CENTER>
 4.3.1 scripts are believed to be fully backward compatible with 4.3.0.  For a list of all the new
